--- a/View/QRCode-View/index.html
+++ b/View/QRCode-View/index.html
@@ -1,7 +1,8 @@
 <!-- 
 	Title: QRCode Reader
 	@author Fábio Silva
-		Daniel Pinto
+		    Daniel Pinto
+		    João Caçote
 	@version 1.0
   -->
 <!doctype html>
